fixed title section sizing and spacing

--- a/assets/css/_feature.scss
+++ b/assets/css/_feature.scss
@@ -7,7 +7,7 @@
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
-    padding: 5rem;
+    padding: 2rem;
 }
 
 .welcome {
@@ -44,7 +44,19 @@
         }
 
         img {
-            width: 800px
+            width: 24rem;
+            height: auto;
+            position: relative;
+
+            @include media-breakpoint-down(md) {
+                width: 60%;
+                margin-bottom: 2.8rem;
+            }
+
+            @include media-breakpoint-down(sm) {
+                width: 80%;
+                margin-bottom: 2.8rem;
+            }
         }
     }
 }
