--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -26,7 +26,7 @@
 
 .navbar-expand-lg {
     flex-direction: row-reverse;
-    position: fixed;
+    // position: fixed;
     width: 100%;
 }
 
